--- a/app/views/admin/sponsors/new.html.haml
+++ b/app/views/admin/sponsors/new.html.haml
@@ -14,7 +14,8 @@
       = f.input :description, input_html: { rows: 3 }, hint: 'The official sponsor description to bbe used in our online and/or printed material'
       = image_tag f.object.picture.thumb.url if f.object.picture?
       = f.input :picture
-      = f.input :website_url
+      = f.input :website_url, input_html: { value: 'http://' }
       = f.input :sponsorship_level, collection: @conference.sponsorship_levels
+      = f.input :state, as: :select, collection: [['Not Started/To Contact', 'not_started'], ['Contacted', 'contacted'], ['In negotiations', ['unconfirmed']]]
       %p.text-right
         = f.action :submit, as: :button, button_html: { class: 'btn btn-primary' }
