--- a/app/views/admin/sponsors/new.html.haml
+++ b/app/views/admin/sponsors/new.html.haml
@@ -9,13 +9,13 @@
 .row
   .col-md-8
     = semantic_form_for(@sponsor, url: (@sponsor.new_record? ? admin_conference_sponsors_path : admin_conference_sponsor_path(@conference.short_title, @sponsor))) do |f|
-      = f.input :email
+
       = f.input :name, input_html: { autofocus: true }
-      = f.input :description, input_html: { rows: 3 }, hint: 'The official sponsor description to bbe used in our online and/or printed material'
-      = image_tag f.object.picture.thumb.url if f.object.picture?
-      = f.input :picture
-      = f.input :website_url, input_html: { value: 'http://' }
+      = f.input :amount
+
       = f.input :sponsorship_level, collection: @conference.sponsorship_levels
-      = f.input :state, as: :select, collection: [['Not Started/To Contact', 'not_started'], ['Contacted', 'contacted'], ['In negotiations', ['unconfirmed']]]
+
+      = f.input :state, as: :select, collection: [['Not Started/To Contact', 'not_started'], ['Contacted', 'contacted'], ['In negotiations', ['unconfirmed']], ['Confirmed', 'confirmed']]
+
       %p.text-right
         = f.action :submit, as: :button, button_html: { class: 'btn btn-primary' }
