--- a/app/views/admin/sponsors/show.html.haml
+++ b/app/views/admin/sponsors/show.html.haml
@@ -1,11 +1,12 @@
 .row
   .col-md-12
     .page-header
-      %h1= @sponsor.name
+      %h1
+        = @sponsor.name
+        = link_to 'Edit', edit_admin_conference_sponsor_path(@conference, @sponsor), class: 'btn btn-primary pull-right'
       .text-muted
         = @sponsor.description
         |
-        .fa.fa-email
         = link_to @sponsor.website_url, @sponsor.website_url
 .row
   .col-md-12
@@ -15,16 +16,16 @@
       %dt State
       %dd= @sponsor.state
       %dt Sponsorship Level
-      %dd= @sponsor.sponsorship_level.try(:name)
+      %dd= @sponsor.sponsorship_level.try(:title)
       %dt Invoiced
       %dd= @sponsor.invoice_sent_at
       %dt Payment
       %dd
-        = @sponsor.amount
         - if @sponsor.paid
           .fa.fa-check.text-success
         - else
           .fa.fa-times.text-danger
+        = number_with_delimiter(@sponsor.amount, delimiter: ',')
       %dt Banner
       %dd
         - if @sponsor.has_banner
@@ -32,7 +33,8 @@
         - else
           .fa.fa-times.text-danger
       %dt Shipments
-      %dd= @sponsor.shipments.length
-      .page-header
-        %h2 Swag
-      = render partial: 'sponsor_swag', locals: { sponsor: @sponsor }
+      %dd= @sponsor.sponsor_shipments.length
+      - if @sponsor.sponsor_swags.any?
+        .page-header
+          %h2 Swag
+        = render partial: 'sponsor_swag', locals: { sponsor: @sponsor }
