--- a/app/views/admin/sponsors/_confirmed.html.haml
+++ b/app/views/admin/sponsors/_confirmed.html.haml
@@ -18,7 +18,7 @@
             %tr
               %td
                 - if sponsor.picture?
-                  = image_tag(sponsor.picture.thumb.url, width: '20%')
+                  = image_tag(sponsor.picture.thumb.url)
               %td
                 = link_to sponsor.name, admin_conference_sponsor_path(@conference, sponsor)
               %td
